Fix modal too large

--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@
   padding-left: 0;
 }
 .modal-custom{
-  min-width: 50vw;
+  min-width: 30vw;
   width: fit-content;
 }
 h3{
